replace old project with new project

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,9 +1,37 @@
-# Add these to your existing .env file in backend folder
+# Music App Environment Configuration Template
+# Copy this file to .env and fill in your own values
+# NEVER share your actual .env file - it contains secret credentials!
 
-# Cloudinary Configuration (get these from your Cloudinary dashboard)
-CLOUDINARY_CLOUD_NAME=your_cloud_name_here
-CLOUDINARY_API_KEY=your_api_key_here
-CLOUDINARY_API_SECRET=your_api_secret_here
+# Server Configuration
+PORT=5000
+MONGODB_URI=mongodb://localhost:27017/musiccc
+JWT_SECRET=your_jwt_secret_key_here_replace_with_strong_secret
+JWT_EXPIRE=7d
+NODE_ENV=development
 
-# Storage mode: 'local' for development, 'cloud' for production
+# Spotify API Credentials (REQUIRED)
+# Get these from https://developer.spotify.com/dashboard/
+# 1. Go to https://developer.spotify.com/dashboard/
+# 2. Log in with your Spotify account
+# 3. Create a new app
+# 4. Copy Client ID and Client Secret from your app dashboard
+SPOTIFY_CLIENT_ID=your_spotify_client_id_here
+SPOTIFY_CLIENT_SECRET=your_spotify_client_secret_here
+
+# Cloudinary Configuration (OPTIONAL - only needed if using cloud storage)
+# Get these from your Cloudinary dashboard at https://cloudinary.com/
+# OR set STORAGE_MODE=local to use local file storage instead (recommended for development)
+CLOUDINARY_CLOUD_NAME=your_cloudinary_name
+CLOUDINARY_API_KEY=your_cloudinary_key  
+CLOUDINARY_API_SECRET=your_cloudinary_secret
+
+# Storage Configuration
+# Options: 'local' (stores files locally) or 'cloud' (uses Cloudinary)
+# For development and sharing with friends, use 'local' to avoid needing cloud credentials
 STORAGE_MODE=local
+
+# Optional: Email Configuration (for user registration/notifications)
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USER=your_email@gmail.com
+EMAIL_PASS=your_app_password
