--- a/backend/package.json
+++ b/backend/package.json
@@ -5,13 +5,13 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
+    "build": "npm install",
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "seed": "node seedDatabase.js",
-    "seed-telugu-hindi": "node seedTeluguHindi.js",
-    "list-songs": "node listSongs.js",
-    "add-song": "node addSong.js",
-    "add-more": "node addMoreSongs.js"
+    "seed": "node seedDatabase.js"
+  },
+  "engines": {
+    "node": "18.x",
+    "npm": "9.x"
   },
   "keywords": [
     "music",
